--- a/style.css
+++ b/style.css
@@ -33,7 +33,10 @@ header .logo{
     position: relative;
     max-width: 80px;
     text-decoration: none;
-    
+    transition: 0.3s; 
+}
+header .logo:hover{
+    color: #844cd4;
 }
 header ul{
     position: relative;
@@ -50,6 +53,10 @@ header ul li a{
     text-decoration: none;
     font-size: 20px;
     font-weight: 600;
+    transition: 0.3s;
+}
+header ul li a:hover{
+    color: #844cd4;
 }
 .content{
     /* position: relative; */
@@ -132,6 +139,33 @@ header ul li a{
 .img3{
     width: 100px;
     height: 100px;
+    animation: pulse 1s linear infinite;
+}
+@keyframes pulse {
+    0%{
+        width: 100px;
+        height: 100px;
+    }
+    5%{
+        width: 110px;
+        height: 110px;
+    }
+    10%{
+        width: 100px;
+        height: 100px;
+    }
+    75%{
+        width: 100px;
+        height: 100px;
+    }
+    80%{
+        width: 110px;
+        height: 110px;
+    }
+    85%{
+        width: 100px;
+        height: 100px;
+    }
 }
 .form{
     justify-content: center;
@@ -173,6 +207,7 @@ header ul li a{
     color: #fff;
     text-align: center;
     cursor: pointer;
+    transition: 0.5s;
 }
 .btnDiv:hover{
     border-radius: 10px;
@@ -181,7 +216,145 @@ header ul li a{
     font-size: 20px;
     font-weight: 700;
     text-decoration: none;
-    color: #fff;
+    color: #333;
     text-align: center;
     cursor: pointer;
+    border-radius: 50px;
+background: linear-gradient(145deg, #f0f0f0, #cacaca);
+box-shadow:  5px 5px 10px #969696,
+             -5px -5px 10px #ffffff;
 }
+.img4{
+    max-width: 500px;
+    animation: animate 5s linear infinite;
+}
+@keyframes animate {
+    0%,100%{
+        transform: translateX(50px);
+    }
+    50%{
+        transform: translateX(150px);
+    }
+}
+.img1{
+    transition: 0.3s;
+    z-index: 2;
+    position: relative;
+    animation: opacity 7s linear infinite;
+}
+@keyframes opacity {
+    0%,100%{
+        opacity: 1;
+    }
+    10%{
+        opacity: 0;
+    }
+    50%{
+        opacity: 0;
+    }
+    60%{
+        opacity: 1;
+    }
+}
+.img5{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 0;
+    bottom: 5px;
+}
+
+/* popup */
+.button {
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 13px;
+    padding: 5px 10px;
+    border: 1px solid #aaa;
+    background-color: #eee;
+    background-image: linear-gradient(top, #fff, #f0f0f0);
+    border-radius: 2px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+    color: #666;
+    text-decoration: none;
+    text-shadow: 0 1px 0 #fff;
+    cursor: pointer;
+    transition: all 0.2s ease-out;
+  }
+  .button:hover {
+    border-color: #999;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
+  }
+  .button:active {
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25) inset;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.5);
+    transition: opacity 200ms;
+    visibility: hidden;
+    opacity: 0;
+    z-index: 999;
+  }
+  .overlay.light {
+    background: rgba(255, 255, 255, 0.5);
+  }
+  .overlay .cancel {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    cursor: default;
+  }
+  .overlay:target {
+    visibility: visible;
+    opacity: 1;
+  }
+  
+  .popup {
+    margin: 75px auto;
+    padding: 20px;
+    background: #fff;
+    width: 300px;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
+    position: relative;
+    border-radius: 10px;
+  }
+  .light .popup {
+    border-color: #aaa;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
+  }
+  /* .popup h2 {
+    margin-top: 0;
+    color: #666;
+    font-family: "Trebuchet MS", Tahoma, Arial, sans-serif;
+  } */
+  .popup .close {
+    position: absolute;
+    width: 25px;
+    height: 2px;
+    top: 10px;
+    right: 20px;
+    opacity: 0.8;
+    transition: all 200ms;
+    font-size: 35px;
+    font-weight: bold;
+    text-decoration: none;
+    color: rgb(245, 37, 37);
+  }
+  .popup .close:hover {
+    opacity: 1;
+  }
+  .popup .content {
+    max-height: 400px;
+    overflow: auto;
+  }
+  .popup p {
+    margin: 0 0 1em;
+  }
+  .popup p:last-child {
+    margin: 0;
+  }
